--- a/Churn Prediction/1. Churn Prediction Using ANN TF-K.ipynb
+++ b/Churn Prediction/1. Churn Prediction Using ANN TF-K.ipynb
@@ -724,6 +724,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Splitting data 80/20 : 80 % training and 20 % testing \n",
+    "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2, random_state = 0, stratify = y)"
    ]
   },
