Update 1. Churn Prediction Using ANN TF-K.ipynb
scaling comment added

--- a/Churn Prediction/1. Churn Prediction Using ANN TF-K.ipynb
+++ b/Churn Prediction/1. Churn Prediction Using ANN TF-K.ipynb
@@ -736,6 +736,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Scaling data using standard scaler to get everything in a single range \n",
+    "\n",
     "scaler = StandardScaler()\n",
     "X_train = scaler.fit_transform(X_train)\n",
     "X_test = scaler.transform(X_test)"
